Documents/Ingress/web-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webv1deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-v1
  template:
    metadata:
      labels:
        app: web-v1
    spec:
      containers:
      - name: k8s-demo
        image: edizdesign/nodejs-image-demo
        ports:
        - name: nodejs-port
          containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: webv1
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30303
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: web-v1
