Documents/Ingress/web-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webv2deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-v2
  template:
    metadata:
      labels:
        app: web-v2
    spec:
      containers:
      - name: k8s-demo
        image: edizdesign/nodejs-image-demo
        ports:
        - name: nodejs-port
          containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: webv2
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30304
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: web-v2
