Documents/Ingress/ingress.yaml
# An Ingress with 2 hosts and 3 endpoints
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-rules
  annotations:
    kubernetes.io/ingress.class: k8s.io/ingress-nginx
spec:
  #To specify a default backend, uncomment the following lines:
  #defaultBackend:
  #  service:
  #    name: echoheaders-default 
  #    port:
  #      number: 80
  rules:
  - host: web-v1.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webv1
            port:
              number: 80
  - host: web-v2.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webv2
            port:
              number: 80
